8218619: [lworld] Execute all test scenarios with C1
Reviewed-by: thartmann